--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -100,14 +100,14 @@
           <a href="{% url 'admin' %}">
             <img src="{% static 'portal/sokalp-logo.png' %}" class="h-auto" alt="" />
           </a>
-          <button class="flex items-center gap-3 font-semibold mt-10">
+          <a href="{% url 'admin' %}" class="flex items-center group hover:stroke-orange-400 gap-3 font-semibold mt-10">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6"
+              class="w-6 h-6 group-hover:stroke-orange-400 stroke-slate-500"
             >
               <path
                 stroke-linecap="round"
@@ -115,27 +115,29 @@
                 d="M6 6.878V6a2.25 2.25 0 0 1 2.25-2.25h7.5A2.25 2.25 0 0 1 18 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 0 0 4.5 9v.878m13.5-3A2.25 2.25 0 0 1 19.5 9v.878m0 0a2.246 2.246 0 0 0-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0 1 21 12v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6c0-.98.626-1.813 1.5-2.122"
               />
             </svg>
-          </button>
-          <button
-            class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
+          </a>
+          <a href="{% url 'users-database' %}">
+            <button
+              class="flex items-center gap-3 group hover:text-orange-400  font-semibold mt-10"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"
-              />
-            </svg>
-          </button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6 group-hover:stroke-orange-400 stroke-slate-500"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"
+                />
+              </svg>
+            </button>
+          </a>
           <button
-            class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
+            class="flex items-center gap-3 group hover:text-orange-400 stroke-slate-500 font-semibold mt-10"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -143,7 +145,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6"
+              class="w-6 h-6 group-hover:stroke-orange-400 stroke-slate-500"
             >
               <path
                 stroke-linecap="round"
@@ -153,7 +155,7 @@
             </svg>
           </button>
           <button
-            class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
+            class="flex items-center gap-3 group hover:text-orange-400 stroke-slate-500 font-semibold mt-10"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -161,7 +163,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6"
+              class="w-6 h-6 group-hover:stroke-orange-400 stroke-slate-500"
             >
               <path
                 stroke-linecap="round"
@@ -176,24 +178,26 @@
             </svg>
           </button>
         </div>
-        <button
-          class="flex items-center gap-3 text-gray-500 hover:text-red-500 font-semibold"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-6 h-6"
+        <a href="{% url 'logout' %}">
+          <button
+            class="flex items-center gap-3 text-gray-500 hover:text-red-500 font-semibold"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M7.5 7.5h-.75A2.25 2.25 0 0 0 4.5 9.75v7.5a2.25 2.25 0 0 0 2.25 2.25h7.5a2.25 2.25 0 0 0 2.25-2.25v-7.5a2.25 2.25 0 0 0-2.25-2.25h-.75m-6 3.75 3 3m0 0 3-3m-3 3V1.5m6 9h.75a2.25 2.25 0 0 1 2.25 2.25v7.5a2.25 2.25 0 0 1-2.25 2.25h-7.5a2.25 2.25 0 0 1-2.25-2.25v-.75"
-            />
-          </svg>
-        </button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M7.5 7.5h-.75A2.25 2.25 0 0 0 4.5 9.75v7.5a2.25 2.25 0 0 0 2.25 2.25h7.5a2.25 2.25 0 0 0 2.25-2.25v-7.5a2.25 2.25 0 0 0-2.25-2.25h-.75m-6 3.75 3 3m0 0 3-3m-3 3V1.5m6 9h.75a2.25 2.25 0 0 1 2.25 2.25v7.5a2.25 2.25 0 0 1-2.25 2.25h-7.5a2.25 2.25 0 0 1-2.25-2.25v-.75"
+              />
+            </svg>
+          </button>
+        </a>
       </div>
       <div class="flex mt-7 items-baseline gap-6 w-screen">
         <div class="ml-[96px] mt-2 flex flex-col gap-6 w-[260px]">
