--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -38,6 +38,31 @@
     </style>
   </head>
   <body class="bg-slate-100 tracking-wide leading-4">
+    <div class="spinner-wrapper" style='display: none'>
+      <div class="spinner-border text-primary" role='status'>
+        <span class="visually-hidden" style='color:white; font-size:18px'>Deleting Question...</span>
+      </div>
+    </div>
+    <style>
+      .spinner-wrapper {
+        background-color: rgba(0, 0, 0, 0.3);
+        position: fixed;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        z-index:9999;
+        display: flex;
+        justify-content: center;
+      }
+    
+      .spinner-border {
+        height: 60px;
+        width: 60px;
+        margin-top: 30vh;
+      }
+    
+    </style>
     <div class="">
       <div
         class="bg-white p-6 shadow-md fixed top-0 left-0 w-48 h-screen flex flex-col justify-between"
@@ -192,8 +217,18 @@
             ALL USERS
           </h1>
 
-          <div class="p-5 rounded-md border-slate-300 mb-5 border-[1px]">
-            <p>Records ({{users_len}})</p>
+          <div class="p-5 rounded-md flex gap-5 items-center border-slate-300 mb-5 border-[1px]">
+            <p id=''>Users ({{users_len}})</p>
+            
+            <div id='delete-div' class='hidden gap-4 items-center'>
+              <p id='selected-box' class='font-semibold text-[13px]'></p>
+              <button id='delete-btn' class='group hover:text-red-500 flex gap-3 items-center'>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                </svg>                    
+                <span class='text-[16px]'>Delete</span>
+              </button>
+            </div>
           </div>
 
           <table class="">
@@ -202,7 +237,7 @@
                 <td
                   class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
                 >
-                  <input type="checkbox" class="size-4" name="" id="" />
+                  <input type="checkbox" class="size-4" name="checkbox-all" id="checkbox-all" />
                 </td>
                 <td
                   class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
@@ -297,7 +332,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id=""
+                    id="checkbox-all"
                   />
                 </td>
                 <td class="py-2 text-[12px] font-semibold tracking-wide text-left">                  
@@ -306,7 +341,7 @@
               {% for user in users %}
               <tr class="">
                 <td class="px-3 py-5 text-[14px] text-gray-700">
-                  <input type="checkbox" class="size-4" />
+                  <input type="checkbox" name='question_check' class="size-4 question_check" id='{{user.user_id}}' />
                 </td>
                 <td class="px-3 py-5 text-[14px] text-gray-700">
                   {% if user.test_name == "" %}
