--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -40,7 +40,7 @@
   <body class="bg-slate-100 tracking-wide leading-4">
     <div class="spinner-wrapper" style='display: none'>
       <div class="spinner-border text-primary" role='status'>
-        <span class="visually-hidden" style='color:white; font-size:18px'>Deleting Question...</span>
+        <span class="visually-hidden" style='color:white; font-size:18px'>Deleting User...</span>
       </div>
     </div>
     <style>
