--- a/portal/templates/portal/test-settings/add-test.html
+++ b/portal/templates/portal/test-settings/add-test.html
@@ -232,6 +232,7 @@
                 </div>
             </li>
             <li>
+              <a href="{% url 'results' tests.id %}">
                 <div
                   class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
@@ -255,6 +256,7 @@
                     Results
                   </p>
               </div>
+            </a>
             </li>
           </ul>
         </div>
