--- a/portal/templates/portal/test-settings/basic-settings.html
+++ b/portal/templates/portal/test-settings/basic-settings.html
@@ -236,7 +236,7 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'user-details' tests.id %}">
+              <a href="{% url 'results' tests.id %}">
                 <div
                   class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
