--- a/portal/templates/portal/test-settings/time-settings.html
+++ b/portal/templates/portal/test-settings/time-settings.html
@@ -263,7 +263,7 @@
               </div>
             </li>
             <li>
-              <a href="{% url 'user-details' test.id %}">
+              <a href="{% url 'results' test.id %}">
                 <div
                   class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
