--- a/portal/templates/portal/test-settings/results.html
+++ b/portal/templates/portal/test-settings/results.html
@@ -266,27 +266,29 @@
               </a>
             </li>
             <li>
-              <div
-                class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+              <a href="{% url 'time-settings' test.id %}">
+                <div
+                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-                  />
-                </svg>
-                <p class="text-[14px] text-slate-500 group-hover:text-black font-semibold">
-                  Time settings
-                </p>
-              </div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+                    />
+                  </svg>
+                  <p class="text-[14px] text-slate-500 group-hover:text-black font-semibold">
+                    Time settings
+                  </p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="{% url 'user-details' test.id %}">
@@ -461,7 +463,7 @@
                     {% if user.score == "" %}
                      -
                     {% else %}
-                     {{user.score}} 
+                     {{user.score}} / {{test.test_question_no}}
                     {% endif %}
                   </td>
                   <td class="px-3 py-5 text-[14px] text-gray-700">
