--- a/static/src/styles.css
+++ b/static/src/styles.css
@@ -1289,13 +1289,30 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.group:hover .group-hover\:flex {
+  display: flex;
+}
+
 .group:hover .group-hover\:stroke-orange-400 {
   stroke: #fb923c;
+}
+
+.group:hover .group-hover\:stroke-red-500 {
+  stroke: #ef4444;
+}
+
+.group:hover .group-hover\:stroke-red-400 {
+  stroke: #f87171;
 }
 
 .group:hover .group-hover\:text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
