--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -185,12 +185,6 @@
             >
           </div>
         </div>
-        <script>
-          function handleDeleteTest(event, id){
-            event.stopPropagation();
-            window.location.href = `/delete-test/${id}`
-          }
-        </script>
         <div class="grid grid-cols-1 mx-8 gap-3 mt-4 mb-4 md:grid-cols-2">
           {% for test in tests %}
               <div onclick="window.location.href = `{% url 'basic-settings' test.id %}`" class="bg-white p-3 rounded-md hover:shadow-md active:shadow-sm flex group flex-col self-start">
@@ -204,7 +198,7 @@
                       >CREATED 14-01-2024</span
                     >
                   </div>
-                  <button onclick='handleDeleteTest(event, {{test.id}})' id='{{test.id}}' class='hidden items-center justify-center group-hover:flex group-hover:text-red-500 '>
+                  <button onclick='showModal(event, {{test.id}})' id='{{test.id}}' class='hidden items-center justify-center group-hover:flex group-hover:text-red-500 '>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-slate-500 hover:text-red-500">
                       <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                     </svg>                    
@@ -248,5 +242,40 @@
         </div>
       </div>
     </div>
+    <div
+    id="modal-sam"
+    class="modal-sam hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"
+  >
+    <div class="w-[600px] flex flex-col">
+      <div class="bg-white p-5 rounded">
+        <div>
+          <h1 class="text-[18px] font-semibold">Deleting test and results</h1>
+        </div>
+        <div class="mt-6">
+          <span class="text-[16px] font-medium leading-6 text-slate-500">
+            Are you sure you want to <span class='font-semibold text-red-500'>permanently</span> delete selected test and collected results? (users will also be unable to access the test)
+          </span>
+          <div class="mt-3 flex flex-col" method="POST">
+            {% csrf_token %}
+            <div class="buttons mt-3 flex gap-2 self-end items-center">
+              <button
+                id="hide-modal"
+                class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:border-orange-400 hover:text-orange-400"
+              >
+                Cancel
+              </button>
+                <button
+                  id='delete-test-btn'
+                  class="bg-red-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-md hover:bg-red-500"
+                >
+                  Delete
+                </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src='{% static "portal/admin.js" %}'></script>
   </body>
 </html>
