--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -404,80 +404,39 @@
     </div>
 
     <div
-      id="modal-sam"
-      class="modal-sam hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"
-    >
-      <div class="w-[600px] flex flex-col">
-        <div class="bg-white p-5 rounded">
-          <div>
-            <h1 class="text-[16px] font-semibold">Excel File Upload</h1>
-          </div>
-          <div class="mt-8">
-            <p class="text-[14px]">
-              Structure of the excel file should be of this format.
-            </p>
-            <table class="min-w-full mt-5">
-              <tbody>
-                <tr class="">
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                    QUESTION
-                  </td>
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                    OPTION 1
-                  </td>
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                    OPTION 2
-                  </td>
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                   OPTION 3
-                  </td>
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                    OPTION 4
-                  </td>
-                  <td
-                    class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left"
-                  >
-                    CORRECT OP
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <form action="{% url 'upload-questions' tests.id %}" class="mt-8 flex flex-col" method="POST" enctype="multipart/form-data">
-              {% csrf_token %}
-              <div class="p-3 border-[1px] border-slate-300 rounded-md">
-                <input required type="file" name='questions' />
-              </div>
-
-              <div class="buttons mt-9 flex gap-4 self-end items-center">
+    id="modal-sam"
+    class="modal-sam hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"
+  >
+    <div class="w-[600px] flex flex-col">
+      <div class="bg-white p-5 rounded">
+        <div>
+          <h1 class="text-[18px] font-semibold">Deleting test and results</h1>
+        </div>
+        <div class="mt-6">
+          <span class="text-[16px] font-medium leading-6 text-slate-500">
+            Are you sure you want to <span class='font-semibold text-red-500'>permanently</span> the delete selected questions?
+          </span>
+          <div class="mt-3 flex flex-col" method="POST">
+            {% csrf_token %}
+            <div class="buttons mt-3 flex gap-2 self-end items-center">
+              <button
+                id="hide-modal"
+                class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:border-orange-400 hover:text-orange-400"
+              >
+                Cancel
+              </button>
                 <button
-                  id="hide-modal"
-                  class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:border-orange-400 hover:text-orange-400"
+                  id='delete-test-btn'
+                  class="bg-red-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-md hover:bg-red-500"
                 >
-                  Cancel
+                  Delete
                 </button>
-                  <button
-                    onclick=""
-                    class="bg-orange-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-md hover:bg-orange-500"
-                  >
-                    Upload
-                  </button>
-              </div>
-              <script src='{% static "portal/users-database.js" %}'></script>
-            </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
     <script src='{% static "portal/questions-manager.js" %}'></script>
     <script>
       function changeLoc(){
