fixed minor bug

--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -410,7 +410,7 @@
     <div class="w-[600px] flex flex-col">
       <div class="bg-white p-5 rounded">
         <div>
-          <h1 class="text-[18px] font-semibold">Deleting test and results</h1>
+          <h1 class="text-[18px] font-semibold">Deleting questions</h1>
         </div>
         <div class="mt-6">
           <span class="text-[16px] font-medium leading-6 text-slate-500">
