added master reset with warning

--- a/portal/templates/portal/test-settings/time-settings.html
+++ b/portal/templates/portal/test-settings/time-settings.html
@@ -318,7 +318,7 @@
           >
             Save
           </button>
-          <script src='{% static "portal/admin.js" %}'></script>
+          <script src='{% static "portal/time-settings.js" %}'></script>
         </div>
       </div>
     </div>
