--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -187,7 +187,7 @@
         </div>
         <div class="grid grid-cols-1 mx-8 gap-3 mt-4 mb-4 md:grid-cols-2">
           {% for test in tests %}
-              <div onclick="window.location.href = `{% url 'basic-settings' test.id %}`" class="bg-white p-3 rounded-md hover:shadow-md active:shadow-sm flex group flex-col self-start">
+              <div onclick="window.location.href = `{% url 'basic-settings' test.id %}`" class="bg-white p-3 rounded-md hover:shadow-md active:shadow-sm flex group flex-col self-start cursor-pointer">
                 <div class="flex justify-between items-center">
                   <div class="flex gap-3 mt-3 ml-3 items-center">
                     <span
@@ -199,7 +199,7 @@
                     >
                   </div>
                   <button onclick='showModal(event, {{test.id}})' id='{{test.id}}' class='hidden items-center justify-center group-hover:flex group-hover:text-red-500 '>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-slate-500 group-hover:stroke-red-400">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-slate-500 ">
                       <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                     </svg>                    
                   </button>
