--- a/portal/templates/portal/test-settings/results.html
+++ b/portal/templates/portal/test-settings/results.html
@@ -38,9 +38,29 @@
     </style>
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
+    <style>
+      .spinner-wrapper {
+        background-color: rgba(0, 0, 0, 0.3);
+        position: fixed;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        z-index:9999;
+        display: flex;
+        justify-content: center;
+      }
+    
+      .spinner-border {
+        height: 60px;
+        width: 60px;
+        margin-top: 30vh;
+      }
+    
+    </style>
     <div class="spinner-wrapper" style='display: none'>
       <div class="spinner-border text-primary" role='status'>
-        <span class="visually-hidden" style='color:white; font-size:18px'>Chaning Time...</span>
+        <span class="visually-hidden" style='color:white; font-size:18px'>Resetting Users...</span>
       </div>
     </div>
     {% csrf_token %}
@@ -68,6 +88,9 @@
       class="upper-nav-bar ml-[80px] bg-white flex justify-between items-center"
     >
       <h1 class="font-semibold p-4 text-base">{{test.test_name}}</h1>
+      <script>
+        const test_id = {{test.id}};
+      </script>
       <div
         class="flex gap-2 items-center text-gray-500 p-4 hover:bg-slate-200 h-full"
       >
@@ -359,8 +382,12 @@
                   >
                     TEST NAME
                   </td>
-                  <td class="px-3 py-5 text-[12px] font-semibold tracking-wide text-left">
-  
+                  <td class="py-2 text-[12px] font-semibold tracking-wide text-left">
+                      <button id='delete-btn' class="hidden p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" id='reset-user' fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+                        </svg>
+                      </button>
                   </td>
                 </tr>
                 <tr class="">
@@ -436,7 +463,11 @@
                 {% for user in users %}
                 <tr class="">
                   <td class="px-3 py-5 text-[14px] text-gray-700">
-                    <input type="checkbox" name='question_check' class="size-4 question_check" id='{{user.user_id}}' />
+                    <input type="checkbox" data-status='{{user.test_status}}' name='question_check' class="size-4 question_check" id='{{user.id}}'
+                      {% if user.test_status == '1' %}
+                        disabled                        
+                      {% endif %}
+                    />
                   </td>
                   <td class="px-3 py-5 text-[14px] text-gray-700">
                     {% if user.username == "" %}
@@ -463,7 +494,7 @@
                     {% if user.score == "" %}
                      -
                     {% else %}
-                     {{user.score}} / {{test.test_question_no}}
+                     {{user.score}} / {{test_question_no}}
                     {% endif %}
                   </td>
                   <td class="px-3 py-5 text-[14px] text-gray-700">
@@ -471,13 +502,13 @@
                      - 
                     {% else %} 
                      <span>
-                      {{user.test_name}}
+                      {{test.test_name}}
                      </span>
                     {% endif %}
                   </td>
                   <td class="py-2 text-[12px] font-semibold tracking-wide text-left">
                     <a href="{% url 'reset-user' user.id test.id  %}">
-                      <button class="{% if user.test_status == '1' %} hidden {% elif user.test_status == '2' %} inline-block {% endif %}">
+                      <button class="{% if user.test_status == '1' %} hidden {% elif user.test_status == '2' %} inline-block {% endif %} p-3">
                         <svg xmlns="http://www.w3.org/2000/svg" id='reset-user' fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
                         </svg>
@@ -489,15 +520,43 @@
               </tbody>
             </table>
           </div>
-          <button
-            id='butt'
-            class="bg-orange-400 w-20 inline-block text-white px-4 py-[12px] font-semibold text-[18px] rounded-lg border-2 hover:bg-orange-500"
-          >
-            Save
-          </button>
-          <script src='{% static "portal/admin.js" %}'></script>
         </div>
       </div>
     </div>
+    <div
+    id="modal-sam"
+    class="modal-sam hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"
+  >
+    <div class="w-[600px] flex flex-col">
+      <div class="bg-white p-5 rounded">
+        <div>
+          <h1 class="text-[18px] font-semibold">Deleting questions</h1>
+        </div>
+        <div class="mt-6">
+          <span class="text-[16px] font-medium leading-6 text-slate-500">
+            Are you sure you want to <span class='font-semibold text-red-500'>permanently</span> reset the selected user(s)?
+          </span>
+          <div class="mt-3 flex flex-col" method="POST">
+            {% csrf_token %}
+            <div class="buttons mt-3 flex gap-2 self-end items-center">
+              <button
+                id="hide-modal"
+                class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:border-orange-400 hover:text-orange-400"
+              >
+                Cancel
+              </button>
+                <button
+                  id='reset-user-btn'
+                  class="bg-red-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-md hover:bg-red-500"
+                >
+                  Reset
+                </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <script src='{% static "portal/results.js" %}'></script>
   </body>
 </html>
