--- a/portal/templates/portal/test.html
+++ b/portal/templates/portal/test.html
@@ -131,10 +131,10 @@
       <script src='{% static "portal/test.js" %}'></script>
 
       <div class="navigation-button">
-        <button name="saveandnext" id="save" class="saveandnext" onclick="handleSave()">Save</button>
         <button name="saveandnext" id="saveandnext" class="saveandnext" onclick="handleSaveAndNext()">Save and Next</button>
         <button name="saveandnext" id="next" class="saveandnext" onclick="handleNext()">Next</button>
-        <button name="goback" id="goback" class="saveandnext" onclick="handleBack()">Go Back</button>
+        <button name="goback" id="goback" class="saveandnext" onclick="handleBack()">Back</button>
+        <button name="saveandnext" id="save" class="saveandnext" onclick="handleClear()">Clear</button>
       </div>
       
     </div>
