added css transition

--- a/portal/templates/portal/add-user.html
+++ b/portal/templates/portal/add-user.html
@@ -4,6 +4,15 @@
 
 {% block title %}Sokalp - Add User{% endblock title %}
 
+<style>
+  div {
+    transition: all 0.1s;
+  }
+  button{
+    transition: all 0.1s;
+  }
+</style>
+
 {% block body_block %}
 <body class="bg-slate-100 tracking-wide leading-4 w-screen">
   <div
