--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -5,6 +5,16 @@
     <title>Sokalp - Admin Panel</title>
     <link rel="stylesheet" href="{% static 'src/styles.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
+
+    <style>
+      div {
+        transition: all 0.1s;
+      }
+      button{
+        transition: all 0.1s;
+      }
+    </style>
+
   </head>
   <body class="bg-slate-100 tracking-wide leading-4">
     <div class="">
