--- a/portal/templates/portal/test-settings/add-test.html
+++ b/portal/templates/portal/test-settings/add-test.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'portal/basic-settings.css' %}" />
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
+    <style>
+      div {
+        transition: all 0.1s;
+      }
+      button{
+        transition: all 0.1s;
+      }
+    </style>
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
     <div
