--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="{% static 'src/styles.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
     <style>
+      div {
+        transition: all 0.1s;
+      }
+      button{
+        transition: all 0.1s;
+      }
+    </style>
+    <style>
       table {
         border-collapse: separate;
         border-spacing: 0;
