--- a/portal/templates/portal/test-settings/results.html
+++ b/portal/templates/portal/test-settings/results.html
@@ -12,6 +12,15 @@
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
 
     <style>
+      div {
+        transition: all 0.1s;
+      }
+      button{
+        transition: all 0.1s;
+      }
+    </style>
+
+    <style>
       table {
         border-collapse: separate;
         border-spacing: 0;
