added css transition

--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -12,6 +12,15 @@
     />
 
     <style>
+      div {
+        transition: all 0.1s;
+      }
+      button{
+        transition: all 0.1s;
+      }
+    </style>
+
+    <style>
       table {
         border-collapse: separate;
         border-spacing: 0;
