--- a/portal/templates/portal/user.html
+++ b/portal/templates/portal/user.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="{% static 'portal/user-style.css' %}">
 {% endblock styles %}
 
+<style>
+  div {
+    transition: all 0.1s;
+  }
+  button{
+    transition: all 0.1s;
+  }
+</style>
+
 {% block content %}
   <nav>
     <div class="nav-div">
