--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -337,7 +337,7 @@
                     placeholder="Filter"
                     class="border-b-2 font-normal text-[14px] p-2 outline-none focus:border-orange-400"
                     name=""
-                    id="test-filter"
+                    id="email-filter"
                   />
                 </td>
               </tr>
