added result detailed

--- a/portal/templates/portal/test-settings/result-detailed.html
+++ b/portal/templates/portal/test-settings/result-detailed.html
@@ -348,7 +348,7 @@
             </div>
           </div> 
           {% for question in questions %}
-            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2"">
+            <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2">
               <div class="flex gap-4 items-start p-5 justify-between">
                 <div class="flex gap-4">
                   <label for="{{question.id}}" class="font-semibold text-[18px]">Q. {{forloop.counter}}</label>
