--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -203,9 +203,22 @@
                 <div class="flex justify-between items-center">
                   <div class="flex gap-3 mt-3 ml-3 items-center">
                     <span
-                      class="text-[12.5px] px-[8px] py-[6px] font-semibold border-2 border-green-500 rounded-md text-green-500"
-                      >ACTIVE</span
-                    >
+                      class="text-[12.5px] px-[8px] py-[6px] font-semibold border-2 rounded-md 
+                      {% if test.activated %}
+                        border-green-500
+                        text-green-500
+                      {% else %}
+                        border-slate-400
+                        text-slate-400
+                      {% endif %}
+                      "
+                      >
+                        {% if test.activated %}
+                          ACTIVE
+                        {% else %}
+                          INACTIVE
+                        {% endif %}
+                    </span>
                     <span class="text-[14px] font-semibold text-gray-400"
                       >CREATED {{test.created_date.day}}-{{test.created_date.month}}-{{test.created_date.year}}</span
                     >
